fix for top level bullet vertical alignment

--- a/src/less/tree.less
+++ b/src/less/tree.less
@@ -178,7 +178,7 @@
     height: 10px;
     background-color:@bullet-color;
     position:absolute;
-    top:29px;
+    top:26px;
     left:7px;
 }
 
@@ -197,7 +197,7 @@
     height: 22px;
     border:1px solid @bullet-color;
     position: absolute;
-    top:22px;
+    top:19px;
 }
 
 .children .item .content{
